#3 implement port publishNews
