# internal/ports/http/types.go
@@ -7,6 +7,7 @@ import (
 )
 
 type GenericResponse static.GenericResponse
+type PublishNewsRequest static.PublishNewsRequest
 
 type ErrResponse struct {
 	Err     error  `json:"-"`
@@ -21,5 +22,9 @@ func (e ErrResponse) Render(w http.ResponseWriter, r *http.Request) error {
 }
 
 func (s GenericResponse) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
+
+func (p PublishNewsRequest) Bind(r *http.Request) error {
 	return nil
 }
